# i3bar-cmus

./: Cargo.toml  README.md
src/: lib.rs  main.rs
