[package]
name = "i3bar-cmus"
version = "0.1.0"
authors = ["Redmar van de Riet <redmar@d-centralize.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
dbus = "0.7"

serde_json = "1.0"
